--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mysql2": "^3.15.1",
     "node-fetch": "^3.3.2"
   }
 }
