--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,17 @@
     "dev": "vite",
     "dev:local": "vite --open /local.html",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
-    "vite": "^5.0.8"
+    "@vitest/ui": "^3.2.4",
+    "happy-dom": "^19.0.2",
+    "jsdom": "^27.0.0",
+    "vite": "^5.0.8",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@discord/embedded-app-sdk": "^2.4.0"
