--- a/bot/package.json
+++ b/bot/package.json
@@ -9,12 +9,18 @@
     "dev": "node --watch bot.js",
     "register": "node register-commands.js"
   },
-  "keywords": ["discord", "bot", "connections"],
+  "keywords": [
+    "discord",
+    "bot",
+    "connections"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.80",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
-    "mysql2": "^3.15.1"
+    "mysql2": "^3.15.1",
+    "node-fetch": "^3.3.2"
   }
 }
