--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.8"
 
 services:
-  connections-game:
+  synapse-game:
     build:
       context: .
       args:
         VITE_DISCORD_CLIENT_ID: ${VITE_DISCORD_CLIENT_ID}
         DISCORD_CLIENT_SECRET: ${DISCORD_CLIENT_SECRET}
-    container_name: connections-game
+    container_name: synapse-game
     restart: unless-stopped
     ports:
       - "3001:3001"
