--- a/example.env
+++ b/example.env
@@ -3,5 +3,5 @@ DISCORD_CLIENT_SECRET=YOUR_DISCORD_CLIENT_SECRET
 
 # MySQL Connection String
 # Format: mysql://username:password@host:port/database
-# Example: mysql://root:password@localhost:3306/connections_game
+# Example: mysql://root:password@localhost:3306/synapse_game
 MYSQL_CONNECTION_STRING=mysql://username:password@host:port/database
